--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,50 @@
   }
 }
 
+.navbar {
+  text-align: center;
+  background-color: black;
+  color: white;
+}
+
+.details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  background-color: rgb(0, 119, 128);
+  padding: 0 20px 20px 20px;
+  border-radius: 5%;
+  color: white;
+}
+
+.icon-container {
+  display: grid;
+  grid-template-columns: 250px 250px 250px;
+}
+
+.class-div {
+  text-align: center;
+  border: 1px solid black;
+  background-color: rgb(0, 119, 128);
+  width: 145px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  margin: 1rem;
+  color: white;
+}
+
+.align {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
